--- a/muh_bank_app/templates/html/layout.html
+++ b/muh_bank_app/templates/html/layout.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <title>Muh Bank</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+
+{% block navbar %}
+  
+  <div class="navbar navbar-fixed-top">
+    <p>Hello</p>
+
+  </div>
+  
+{% endblock %}
+
 <div class=page>
   <h1>Muh Bank</h1>
     <p>
