--- a/muh_bank_app/templates/html/layout.html
+++ b/muh_bank_app/templates/html/layout.html
@@ -1,30 +1,37 @@
 <!doctype html>
-<title>Muh Bank</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 
-{% block navbar %}
-  
-  <div class="navbar navbar-fixed-top">
-    <p>Hello</p>
 
-  </div>
-  
-{% endblock %}
 
-<div class=page>
-  <h1>Muh Bank</h1>
-    <p>
-    Welcome to <i>Muh Bank!</i>
-  </p>
-  <div class=metanav>
-  {% if not session.logged_in %}
-    <a href="{{ url_for('login') }}">log in</a>
-  {% else %}
-    <a href="{{ url_for('logout') }}">log out</a>
-  {% endif %}
-  </div>
-  {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
-  {% endfor %}
-  {% block body %}{% endblock %}
-</div>
+<html>
+  <title>Muh Bank</title>
+  <!-- <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}"> -->
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <body>
+
+    {% include 'includes/_navbar.html' %}
+
+    <div class=page>
+      <h1>Muh Bank</h1>
+        <p>
+        Welcome to <i>Muh Bank!</i>
+      </p>
+      <div class=metanav>
+      {% if not session.logged_in %}
+        <a href="{{ url_for('login') }}">log in</a>
+      {% else %}
+        <a href="{{ url_for('logout') }}">log out</a>
+      {% endif %}
+      </div>
+      {% for message in get_flashed_messages() %}
+        <div class=flash>{{ message }}</div>
+      {% endfor %}
+      {% block body %}{% endblock %}
+    </div>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="//cdn.ckeditor.com/4.6.2/basic/ckeditor.js"></script>
+    <script type="text/javascript">CKEDITOR.replace('editor')</script>
+
+  </body>
+</html>
