--- a/muh_bank_app/templates/html/layout.html
+++ b/muh_bank_app/templates/html/layout.html
@@ -18,7 +18,7 @@
       </p>
       <div class=metanav>
       {% if not session.logged_in %}
-        <a href="{{ url_for('login') }}">log in</a>
+        <a href="{{ url_for('login') }}">Log in</a>
       {% else %}
         <a href="{{ url_for('logout') }}">log out</a>
       {% endif %}
