Added registration, needs functionality with db

--- a/muh_bank_app/templates/html/register.html
+++ b/muh_bank_app/templates/html/register.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'html/layout.html' %}
 
 {% block body %}
 
@@ -22,5 +22,5 @@
     </div>
     <p><input type="submit" class="btn btn-primary" value="Submit"></p>
   </form>
-  
+
 {% endblock %}
