Updated forms to properly work, need sql connection. Updated several htmls files

--- a/muh_bank_app/templates/html/home.html
+++ b/muh_bank_app/templates/html/home.html
@@ -2,5 +2,12 @@
 
 {% block body %}
 
+     <div class="container">
+      <h1>Muh Bank</h1>
+        <p>
+        Welcome to <strong><i>Muh Bank!</i></strong>
+      </p>
+      <!-- Block for extending other html pages. -->
+    </div>
 
 {% endblock %}
