--- a/muh_bank_app/templates/html/layout.html
+++ b/muh_bank_app/templates/html/layout.html
@@ -9,15 +9,11 @@
 
     {% include 'includes/_navbar.html' %}
 
-    <div class=page>
-      <h1>Muh Bank</h1>
-        <p>
-        Welcome to <i>Muh Bank!</i>
-      </p>
-
-     
+    <!-- Block for extending other html pages. -->
+    <div class="container">
+      {% include 'includes/_messages.html' %}
+      {% block body %}{% endblock %}
     </div>
-
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="//cdn.ckeditor.com/4.6.2/basic/ckeditor.js"></script>
     <script type="text/javascript">CKEDITOR.replace('editor')</script>
