--- a/muh_bank_app/templates/includes/_navbar.html
+++ b/muh_bank_app/templates/includes/_navbar.html
@@ -12,12 +12,17 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
+            
+			{% if session.logged_in %}
+              <li><a href="/transfer">Make a Transfer</a></li>
+              <li><a href="/account">Account</a></li>
+            {% endif%}
+
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-          	
+
             {% if session.logged_in %}
-              <li><a href="/transfer">Make a Transfer</a></li>
               <li><a href="/logout">Logout</a></li>
             {% else %}
               <li><a href="/register">Register</a></li>
