Removed $ bug in account

--- a/muh_bank_app/templates/html/account.html
+++ b/muh_bank_app/templates/html/account.html
@@ -3,7 +3,7 @@
   
   <h1>Account Details</h1>
   <div>
-    <p>Account ID: $ {{session['accountID']}} </p>
+    <p>Account ID: {{session['accountID']}} </p>
     <p>First Name: {{session['fname']}} </p>
     <p>Last Name: {{session['lname']}}</p>
     <p>SSN (NOT REALLY!): {{session['ssn']}} </p>
