Fixed login in transfer, was not transfering properly

--- a/muh_bank_app/templates/html/transfer.html
+++ b/muh_bank_app/templates/html/transfer.html
@@ -14,10 +14,18 @@
   <form action="" method="POST">
 
     <div>
-      <label>Account Type</label>
+      <label>Your Account Type</label>
       <select name="accountType" class="form-control">
-        <option value="saving">Savings</option>
-        <option value="checking">Checking</option>
+        <option value="savingBalance">Savings</option>
+        <option value="checkingBalance">Checking</option>
+      </select>
+    </div>
+
+    <div>
+      <label>Dest Account Type</label>
+      <select name="destAccountType" class="form-control">
+        <option value="savingBalance">Savings</option>
+        <option value="checkingBalance">Checking</option>
       </select>
     </div>
 
