--- a/muh_bank_app/templates/includes/_messages.html
+++ b/muh_bank_app/templates/includes/_messages.html
@@ -1,3 +1,8 @@
+<!-- 
+  Jacob McKenna
+  UAF CS492 Computer Security I 
+ -->
+
 {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
     {% for category, message in messages %}
