--- a/muh_bank_app/templates/includes/_navbar.html
+++ b/muh_bank_app/templates/includes/_navbar.html
@@ -1,3 +1,8 @@
+<!-- 
+  Jacob McKenna
+  UAF CS492 Computer Security I 
+ -->
+
 <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
@@ -12,7 +17,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            
+
 			{% if session.logged_in %}
               <li><a href="/transfer">Make a Transfer</a></li>
               <li><a href="/account">Account</a></li>
